# TolyFFmpeg

./: Readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/toly1994/tolyffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/toly1994/tolyffmpeg/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/toly1994/tolyffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
